Improve appearance of scrollbars and ensure tab bars always fit the height
Refactor tab panel to hide vertical scrollbar and update thin-scrollbar CSS to reduce width and opacity.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,8 +42,8 @@
   }
   
   .thin-scrollbar::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
+    width: 3px;
+    height: 3px;
   }
   
   .thin-scrollbar::-webkit-scrollbar-track {
@@ -51,12 +51,12 @@
   }
   
   .thin-scrollbar::-webkit-scrollbar-thumb {
-    background-color: rgba(59, 130, 246, 0.3);
+    background-color: rgba(59, 130, 246, 0.25);
     border-radius: 4px;
   }
   
   .thin-scrollbar::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(59, 130, 246, 0.5);
+    background-color: rgba(59, 130, 246, 0.4);
   }
   
   /* Scrollbar colors */
